# icloud-calendar-manager

./: .flake8  .gitignore  CHANGELOG.md  COMPATIBILITY.md  DECISIONS.md  LICENSE  MULTI_PROVIDER_PLAN.md  OBSIDIAN.md  QA.md  README.md  icloud_calendar_manager.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
icloud_calendar_manager/: __init__.py  __main__.py  cli.py  client.py  config.py  exceptions.py  manager.py  models.py  oauth.py  providers.py
icloud_calendar_manager/backends/: __init__.py  base.py  caldav_backend.py  google_tasks.py  graph_backend.py  transport.py
tests/: conftest.py  test_backend_builder.py  test_backward_compat.py  test_caldav_idiom.py  test_capabilities.py  test_cli.py  test_client.py  test_client_multiprovider.py  test_config.py  test_google_tasks.py  test_graph_backend.py  test_integration.py  test_manager.py  test_models.py  test_oauth.py  test_providers.py  test_reminders.py
